Fix items not being properly added to the drops because of async usage